<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="thuypham.ptithcm.spotify.viewmodel.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btnBackForgotPw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_back"
                    android:padding="10dp"
                    android:src="@drawable/ic_back_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/txtToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ECEDEE" />

        <TextView
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/forgotPw"
            android:translationY="-1.71sp" />

        <EditText
            android:id="@+id/edtEmailForgot"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@null"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/default_margin"
            android:hint="@string/edt_email"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:text="@={userViewModel.email}" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="#ECEDEE" />

        <TextView
            android:id="@+id/btnSendMailPw"
            style="@style/txtHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/bg_rounded_corner"
            android:backgroundTint="@{userViewModel.isValidate(userViewModel.email) ? @color/colorOrange : @color/colorGrayBtnEnable}"
            android:clickable="true"
            android:enabled="@{userViewModel.isValidate(userViewModel.email)}"
            android:gravity="center"
            android:onClick="@{(v) -> userViewModel.forgotPw(v)}"
            android:padding="@dimen/paddingDefault"
            android:text="@string/reset_password" />

        <ProgressBar
            android:id="@+id/progressbarForgotPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</layout>